# ConsTADs

./: ConsTADs usage.html  ConsTADs usage.ipynb  README.md  pyproject.toml  requirement.txt  setup.py
16_TAD_caller_results_for_7_cell_lines/Rao2014-GM12878-DpnII-allreps-filtered-50kb/: chr2_DI.bed
16_TAD_caller_results_for_7_cell_lines/Rao2014-HMEC-MboI-allreps-filtered-50kb/: chr2_DI.bed  chr2_IS.bed
16_TAD_caller_results_for_7_cell_lines/Rao2014-HUVEC-MboI-allreps-filtered-50kb/: chr2_IS.bed
16_TAD_caller_results_for_7_cell_lines/Rao2014-K562-MboI-allreps-filtered-50kb/: chr2_IS.bed
16_TAD_caller_results_for_7_cell_lines/Rao2014-KBM7-MboI-allreps-filtered-50kb/: chr2_IS.bed
16_TAD_caller_results_for_7_cell_lines/Rao2014-NHEK-MboI-allreps-filtered-50kb/: chr2_DI.bed
ConsTADs/: ConsTADs_main.py  GetConsTADs.py  PlotFunction.py  Preprocess.py  TadSeparationLandscape.py  __init__.py  source.py
ConsTADs_script/: ConsTADs_main.py  Fig1_tad_calling_method_comparison.py  Fig2_tad_caller_evaluation_by_boundary_voting.py  Fig3_construction_for_TAD_separation_landscape.py  Fig4_comparison_of_bounadry_between_cell_type_with_TAD_separation_landscape.py  Fig5_identify_three_types_of_boundary_regions.py  Fig6_identify_ConsTADs_by_boundary_matching_and analysis_ConsTADs.py  GetConsTADs.py  IdentifyBoundaryRegions.py  Loading_results_of_TAD_callers.py  PlotFunction.py  TadSeparationLandscape.py
GM12878_ConsTADs_results/: GM12878_hg19_all_chr_boundary_region.bed  GM12878_hg19_all_chr_consensus_domain.bed
TAD_caller_result/GM12878_MboI/: chr2_IS.bed
(+145 files in other folders)
